[gd_scene load_steps=9 format=2]

[ext_resource path="res://TemporalAssets/UI/PNG/glassPanel_projection.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/FuenteHUD.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Juego/UI/ContenedorInfo.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "Invisible"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Invisible_Visible"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Visible"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Visible_Invisible"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 17
outline_size = 1
outline_color = Color( 0.0823529, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="ContenedorInfo" type="NinePatchRect"]
margin_right = 150.0
margin_bottom = 110.0
texture = ExtResource( 1 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Invisible = SubResource( 2 )
anims/Invisible_Visible = SubResource( 4 )
anims/Visible = SubResource( 3 )
anims/Visible_Invisible = SubResource( 5 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -68.5
margin_top = 5.34539
margin_right = 68.5
margin_bottom = 132.345
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.803922, 0.556863, 1, 1 )
text = "Â¡Advertencia!
Se encuentra
en area de 
Recarga
"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerDesaparecer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TimerDesaparecer" to="." method="_on_TimerDesaparecer_timeout"]
